--- a/radioactive_elements_app/package.json
+++ b/radioactive_elements_app/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "tauri": "tauri",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
@@ -11,6 +12,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
+    "@tauri-apps/api": "^2.2.0",
+    "@tauri-apps/plugin-http": "^2.3.0",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
@@ -20,6 +23,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@tauri-apps/cli": "^2.2.7",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
